# GDDecompProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libraries/cappuccino-sdk/template/default-cpp/cappuccino-sdk/incl/cocos2dx/include/: cocos2d.h
libraries/cappuccino-sdk/template/default-cpp/cappuccino-sdk/incl/cocos2dx/platform/win32/: CCApplication.h
libraries/cappuccino-sdk/template/default-cpp/cappuccino-sdk/incl/cocos2dx/touch_dispatcher/: CCTouchDispatcher.h
libraries/cappuccino-sdk/template/default-cpp/cappuccino-sdk/incl/extensions/: cocos-ext.h
libraries/fmod/: fmod_include.h
src/: dllmain.cpp
src/Headers/: Utils.cpp  Utils.h  hook_utils.cpp  hook_utils.hpp  includes.h
src/Headers/GD/: geometryjump.h
src/Headers/GD/Layers/: DemonFilterSelectLayer.h  FLAlertLayer.hpp  GJBaseGameLayer.h  LevelSearchLayer.h  MenuGameLayer.cpp  MenuGameLayer.h  MenuLayer.h  PlayLayer.h  RateDemonLayer.h
src/Headers/GD/Misc/: FMODAudioEngine.cpp  FMODAudioEngine.h  GJAccountManager.h  GJUserScore.h  GManager.h  GameLevelManager.cpp  GameLevelManager.h  GameManager.cpp  GameManager.h  GameSoundManager.cpp  GameSoundManager.h  GameToolbox.h
src/Headers/GD/Sprites/: ButtonSprite.h  CCMenuItemSpriteExtra.h  CCSpritePlus.h  PlayerObject.h
src/Layers/: MenuLayer.cpp  init.cpp  init.h
src/Layers/Types/: MenuLayer.h
